<resources>
    <string name="app_name">Bus Radar</string>

    <!-- Home Page Strings -->
    <string name="home_logout">Logout</string>
    <string name="home_location">Dhanmondi, Dhaka</string>
    <string name="home_welcome">Hey!</string>
    <string name="home_welcome_sub">Let\'s get going</string>

    <!-- Bus Search UI Strings -->
    <string name="back">Home</string>
    <string name="search_bus">Search Buses By Name</string>
    <string name="trending_header">Trending Searches</string>
    <string name="bus_name_default">bus_name</string>

    <!-- Route Search UI Strings -->
    <string name="route_from">From</string>
    <string name="route_from_location">Location A</string>
    <string name="route_to">To</string>
    <string name="route_to_location">Location B</string>
    <string name="route_show_sel_route">Showing Selected Route</string>
    <string name="route_change_sel_route">You can also select the other routes(grey) on map</string>

    <!-- Route Search Show Bus UI Strings -->
    <string name="route_show_sel_bus">Showing Bus of Selected Route</string>
    <string name="route_sort_bus">Sort By</string>

    <string name="bus_fare_default">Route Fare: Tk. 30</string>
    <string name="bus_rate_default">Rating: 4.2/5</string>

    <!-- Bus Info UI Strings -->
    <string name="bus_info_name_default">Bus Name</string>
    <string name="bus_info_tagline_default">A Tagline</string>
    <string name="bus_info_rate_default">Rating: 4/5</string>
    <string name="bus_info_rev_name_default">Reviewer Name</string>
    <string name="bus_info_rev_content_default">This is a sample review. I just wanna check if it overflows in width. random filler words. bla bla bla</string>

    <string name="bus_info_route_bus_location">Selected Route and Bus Location</string>
    <string name="bus_info_map_guide">Map Guidance</string>
    <string name="bus_info_ticket_fare">Bus Ticket Fare</string>
    <string name="bus_info_fare_default">Tk. 30</string>

    <!-- radio button -->
    <string name="radio_btn_rev">Reviews</string>
    <string name="radio_btn_route">Route</string>
    <string name="radio_btn_rating">Rating</string>
    <string name="radio_btn_fare">Fare</string>

    <string name="map_key" translatable="false">AIzaSyAhEl7PNa5XIk876o93Ty6D7pYZSe_z8XA</string>
</resources>
