<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="343dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/route_show_bus_background">


    <ImageView
        android:id="@+id/avail_bus_1_img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="fitXY"
        android:src="@drawable/square_img_id1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/avail_bus_1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/bus_name_default"
            android:textColor="@color/green_dark"
            android:textSize="15sp"
            android:layout_gravity="start"
            android:layout_marginBottom="2dp"
            />
        <TextView
            android:id="@+id/avail_bus_1_fare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/bus_fare_default"
            android:textColor="@color/text_grey"
            android:textSize="15sp"
            android:layout_gravity="start"
            android:layout_marginBottom="2dp"
            />
        <TextView
            android:id="@+id/avail_bus_1_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/bus_rate_default"
            android:textColor="@color/text_grey"
            android:textSize="15sp"
            android:layout_gravity="start"
            android:layout_marginBottom="2dp"
            />
    </LinearLayout>

</LinearLayout>