<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusInfoReviewUI">

    <!-- Back Button -->
    <TextView
        android:id="@+id/bus_info_rev_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:padding="5dp"
        android:text="@string/back"
        android:textColor="@color/fresh_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <!-- static bottom bar-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:scaleType="fitXY"
        android:src="@drawable/bottom_static_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:layout_width="158dp"
        android:layout_height="158dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bus_circle_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.040" />

    <TextView
        android:id="@+id/bus_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/bus_info_name_default"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.280" />

    <!-- slide button here -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/review_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="Trip Reviews"
            android:textColor="@color/fresh_green"
            android:textSize="14sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.560" />

        <TextView
            android:id="@+id/route_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="Route"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/text_grey"
            android:textSize="14sp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.560" />


    </LinearLayout>

    <!-- rate star here -->
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="180dp"
        android:layout_height="30dp"
        style="?android:attr/ratingBarStyleIndicator"
        android:numStars="5"
        android:stepSize="0.1"
        android:isIndicator="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.510"
        />


    <TextView
        android:id="@+id/bus_info_rate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/bus_info_rate_default"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.560" />

    <LinearLayout
        android:id="@+id/review1_layout"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bus_info_rev_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.690"
        android:orientation="vertical">
        <TextView
            android:id="@+id/bus_info_rev_1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/bus_info_rev_name_default"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/bus_info_rev_1_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/bus_info_rev_content_default"
            android:textColor="@color/text_grey"
            android:textSize="15sp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/review2_layout"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bus_info_rev_background"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review1_layout">

        <TextView
            android:id="@+id/bus_info_rev_2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/bus_info_rev_name_default"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/bus_info_rev_2_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/bus_info_rev_content_default"
            android:textColor="@color/text_grey"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>